# ugc-video-generator

./: .gitignore  PRD.md  SYSTEM_READY.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/agents/: copilot_agent.py  dna_extractor_agent.py  prompt_engineering_agent.py  requirements_agent.py  scene_prompt_agent.py  script_agent.py  storyboard_agent.py  video_generator_agent.py
backend/app/config/: __init__.py  settings.py
backend/app/middleware/: auth.py  rate_limiter.py  security_headers.py  usage_tracker.py
backend/app/models/: character_dna.py  product_dna.py  product_studio_schemas.py  production_bible.py  schemas.py
backend/app/pipelines/: perfume_pipeline.py  product_studio_pipeline.py  video_pipeline.py
backend/app/routers/: avatars.py  copilot.py  editor.py  generation.py  health.py  jobs.py  mass_generator.py  perfume.py  product_studio.py  storyboard.py  video.py
backend/app/services/: audio_service.py  avatar_vision_service.py  consistency_service.py  ffmpeg_service.py  image_service.py  inspiration_service.py  perfume_image_service.py  perfume_name_cleaner.py  product_studio_service.py  product_vision_service.py  production_bible_service.py  reference_validation_service.py  script_service.py  storage_service.py  supabase_storage.py  video_service.py
backend/app/tasks/: celery_app.py  generation_tasks.py
backend/app/utils/: redis_client.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_rate_limiter.py  test_security_headers.py
frontend/: components.json  (+8 more)
(+163 files in other folders)
